MODSOURCE-763: refactor